--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -6,8 +6,8 @@
             "Microsoft.AspNetCore.Routing.EndpointMiddleware": "None",
             "Microsoft.AspNetCore.Hosting.Diagnostics": "None",
             "System.Net.Http": "Error",
-            "Microsoft.Azure.SpaceFx": "Information",
-            "Microsoft.Azure.SpaceFx.Core.Services.MessageReceiver": "Information", // Set to Debug to see heartbeats
+            "Microsoft.Azure.SpaceFx": "Debug",
+            "Microsoft.Azure.SpaceFx.Core.Services.MessageReceiver": "Information",
             "Microsoft.Azure.SpaceFx.Core.Services.HeartbeatService": "Information",
             "Microsoft.Azure.SpaceFx.Core.Services.ResourceUtilizationMonitor": "Information"
         }
